<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/deletecoin"
        android:layout_width="766dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cointitle"
        android:background="@android:color/holo_red_dark"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="Remove coin from your wallet"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/deposit"
        android:layout_width="766dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deletecoin"
        android:background="#4ed400"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="Deposit coin into your bank account"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/send"
        android:layout_width="766dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deposit"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="Send coin to a friend"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cointitle"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="15sp" />

</RelativeLayout>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/layout_root"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:padding="10dp">-->

    <!--<TextView-->
        <!--android:id="@+id/delete"-->
        <!--android:layout_width="176dp"-->
        <!--android:layout_height="74dp"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:background="@android:color/holo_red_dark"-->
        <!--android:padding="10dp"-->
        <!--android:text="Remove coin from Wallet"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="18sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/deposit"-->
        <!--android:layout_width="181dp"-->
        <!--android:layout_height="74dp"-->
        <!--android:background="#2caf01"-->
        <!--android:padding="10dp"-->
        <!--android:text="Deposit coin into your Bank Account"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="18sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/send"-->
        <!--android:layout_width="376dp"-->
        <!--android:layout_height="24dp"-->

        <!--android:layout_marginTop="12dp"-->
        <!--android:background="#0596f1"-->
        <!--android:padding="10dp"-->
        <!--android:text="Send coin to a friend"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="18sp" />-->

<!--</FrameLayout>-->