<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BankActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="Your Bank Account"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/totaltxt"
        android:layout_width="353dp"
        android:layout_height="32dp"
        android:layout_below="@+id/tv"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="360dp"
        android:layout_height="455dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="12dp" />

</RelativeLayout>