...
        android:paddingTop="10dp"
        android:text="Your Friends"
        android:textAlignment="center"
        android:textSize="30dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="198dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bluebutton"
...
